<?xml version="1.0"?>
<package>
  <name>hector_trajectory_fixed_length</name>
  <version>0.4.1</version>
  <description>
    based on hector_trajectory_server
    hector_trajectory_server keeps track of tf trajectories extracted from tf data and makes this data accessible via a service and topic.
    hector_trajectory_fixed_length works similarly, but only keeps a fixed number of latest poses in the memory (sliding window style).
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="hoangthiennguyen94@gmail.com">Thien Nguyen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="hoangthiennguyen94@gmail.com">Thien Nguyen</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hector_nav_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>hector_map_tools</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>hector_nav_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>hector_map_tools</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
